[package]
name = "class-scheduling"
version = "0.1.0"
edition = "2018"
authors = ["fdb-rs Developers"]
license = "MIT OR Apache-2.0"

[features]
default = ["fdb/fdb-7_1"]

[dependencies]
bytes = "1"
fdb = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
